Staged git ignore

--- a/Smuggler/bin/.gitignore
+++ b/Smuggler/bin/.gitignore
@@ -1,8 +1,12 @@
 /entity/
+/input/
 /loading/
 /models/
+/net/
+/org/
+/physics/
 /render/
-/sound/
 /shaders/
+/sound/
+/textures/
 /toolbox/
-/input/
