Basic menus and font rendering has been implemented

--- a/Smuggler/bin/.gitignore
+++ b/Smuggler/bin/.gitignore
@@ -1,13 +1,11 @@
-/org/
-/physics/
-/render/
-/shaders/
-/sound/
-/textures/
-/toolbox/
+/controler/
 /entity/
+/fontMeshCreator/
+/fontRendering/
+/gui/
 /input/
 /loading/
 /models/
 /net/
-/universe/
+/org/
+/render/
