Finaly fineshed thhe loading System, all resources now need to be loaded via MasterLoader from the file System.

--- a/Smuggler/bin/.gitignore
+++ b/Smuggler/bin/.gitignore
@@ -1,3 +1,10 @@
+/math3d/
+/models/
+/net/
+/physics/
+/render/
+/sound/
+/toolbox/
 /cinematics/
 /controler/
 /entity/
@@ -6,10 +13,4 @@
 /gui/
 /input/
 /loading/
-/math3d/
-/models/
-/net/
-/physics/
-/render/
-/sound/
-/toolbox/
+/exceptions/
