--- a/Smuggler/bin/.gitignore
+++ b/Smuggler/bin/.gitignore
@@ -4,3 +4,12 @@
 /input/
 /models/
 /fontRendering/
+/cinematics/
+/fontMeshCreator/
+/gui/
+/loading/
+/math3d/
+/net/
+/physics/
+/sound/
+/toolbox/
